--- a/bootstrap/Vagrantfile
+++ b/bootstrap/Vagrantfile
@@ -7,6 +7,9 @@ Vagrant.configure(2) do |config|
 
   # node server for vamp
   config.vm.network "forwarded_port", guest: 3000, host: 3000
+  # node server for visual
+  config.vm.network "forwarded_port", guest: 8000, host: 8000
+
   # web server for wordpress
   #config.vm.network "forwarded_port", guest: 80, host: 8080
 
@@ -15,6 +18,7 @@ Vagrant.configure(2) do |config|
     sudo apt-get install -y git
     cd /vagrant
     [ -d musiccodes ] || git clone https://github.com/cgreenhalgh/musiccodes.git
+    [ -d muzivisual ] || git clone https://github.com/littlebugivy/muzivisual.git
     
   SHELL
 
